modules/vpc/main.tf
terraform {
  required_providers {
    aws = {
        source = "hashicorp/aws"
        version = "~> 5.0"
    }
  }
}

resource "aws_vpc" "main" {
    cidr_block = var.vpc_cidr
    enable_dns_support   = true
    enable_dns_hostnames = true

    tags = {
        Name        = var.vpc_name
        Environment = var.environment
    }
}

resource "aws_internet_gateway" "main" {
    vpc_id = aws_vpc.main.id

    tags = {
        Name        = "${var.vpc_name}-igw"
        Environment = var.environment
    }
}

resource "aws_subnet" "public" {
    count             = length(var.public_subnets_cidrs)
    vpc_id            = aws_vpc.main.id
    cidr_block        = var.public_subnets_cidrs[count.index]
    availability_zone = var.availability_zones[count.index]
    map_public_ip_on_launch = true

    tags = {
        Name        = "${var.vpc_name}-public-${count.index + 1}"
        Environment = var.environment
    }
}

resource "aws_subnet" "private" {
    count             = length(var.private_subnets_cidrs)
    vpc_id            = aws_vpc.main.id
    cidr_block        = var.private_subnets_cidrs[count.index]
    availability_zone = var.availability_zones[count.index]

    tags = {
        Name        = "${var.vpc_name}-private-${count.index + 1}"
        Environment = var.environment
        type        = "private"
    }
}

resource "aws_eip"  "nat" {
    domain = "vpc"

    tags = {
        Name        = "${var.vpc_name}-nat-eip"
        Environment = var.environment
    }
}

resource "aws_nat_gateway" "main" {
    allocation_id = aws_eip.nat.id
    subnet_id     = aws_subnet.public[0].id

    tags = {
        Name        = "${var.vpc_name}-nat"
        Environment = var.environment
    }

    depends_on = [aws_internet_gateway.main]
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id  = aws_internet_gateway.main.id
    }

    tags = {
        Name        = "${var.vpc_name}-public-rt"
        Environment = var.environment
    }
}

resource "aws_route_table" "private" {
    vpc_id = aws_vpc.main.id

    route {
        cidr_block     = "0.0.0.0/0"
        gateway_id     = aws_nat_gateway.main.id
    }

    tags = {
        Name        = "${var.vpc_name}-private-rt"
        Environment = var.environment
    }
}

resource "aws_route_table_association" "public" {
    count          = length(var.public_subnets_cidrs)
    subnet_id      = aws_subnet.public[count.index].id
    route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private" {
    count          = length(var.private_subnets_cidrs)
    subnet_id      = aws_subnet.private[count.index].id
    route_table_id = aws_route_table.private.id
}
